Minor: Fix the z-index of particles-js

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -364,13 +364,12 @@ footer.main-footer {
     }
 }
 
-div.page-content-bg {
-  position: fixed;
+div.background {
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -999;
   background-color: #4686a0;
   background-image: url("./images/overlay.svg"), linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);
   background-repeat: no-repeat;
@@ -857,6 +856,9 @@ body {
         a {
             color: inherit;
         }
+    }
+    .title {
+        z-index: 1;
     }
     .more {
         @include vendor('transition', ('transform 0.75s ease', 'opacity 0.75s ease'));
